// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/shouldRouteDropAndBootstrap > when should route > jitosol_gasDrop_false_lowercase 1`] = `
{
  "data": {
    "routerAddr": "0xa1E3651Bdba5f2686d60C7bCbeD8758669CDd92C",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteDropAndBootstrap > when should route > jitosol_gasDrop_false_original 1`] = `
{
  "data": {
    "routerAddr": "0xa1E3651Bdba5f2686d60C7bCbeD8758669CDd92C",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteDropAndBootstrap > when should route > jitosol_gasDrop_true_lowercase 1`] = `
{
  "data": {
    "routerAddr": "0x95e3F492ae1237fb166CCD96642bcD809be5941D",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteDropAndBootstrap > when should route > jitosol_gasDrop_true_original 1`] = `
{
  "data": {
    "routerAddr": "0x95e3F492ae1237fb166CCD96642bcD809be5941D",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteDropAndBootstrap > when should route > ldot_gasDrop_false_lowercase 1`] = `
{
  "data": {
    "routerAddr": "0x6046DD5F660818f9D64Af4536A061D8C3BCE01b9",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteDropAndBootstrap > when should route > ldot_gasDrop_false_original 1`] = `
{
  "data": {
    "routerAddr": "0x6046DD5F660818f9D64Af4536A061D8C3BCE01b9",
    "shouldRoute": true,
  },
}
`;
